# Phorge

./: .gitignore  .goreleaser.yml  LICENSE  Makefile  README.md  go.mod  go.sum  pyproject.toml
cmd/phorge/: main.go
docs/plans/: 2026-02-24-go-bubbletea-rewrite-design.md  2026-02-24-go-bubbletea-rewrite-plan.md
internal/config/: config.go  config_test.go
internal/forge/: backups.go  certificates.go  client.go  client_test.go  commands.go  daemons.go  databases.go  deployments.go  environment.go  errors.go  events.go  firewall.go  git.go  jobs.go  logs.go  servers.go  services_test.go  sites.go  ssh_keys.go  types.go  workers.go
internal/tui/: app.go  external.go  help.go  keymap.go  messages.go  settings.go  setup.go  styles.go
internal/tui/components/: confirm.go  input.go  styles.go  toast.go
internal/tui/panels/: commands.go  daemons.go  database_users.go  databases.go  deploy_script.go  deployments.go  domains.go  environment.go  events.go  firewall.go  git.go  jobs.go  logs.go  output.go  panel.go  server_info.go  servers.go  site_info.go  sites.go  ssh_keys.go  ssl.go  tree.go  workers.go
internal/tui/theme/: theme.go
src/phorge/: __init__.py  __main__.py  app.py  cli.py  config.py
src/phorge/api/: client.py  exceptions.py  models.py
src/phorge/commands/: palette.py
src/phorge/screens/: config_screen.py  confirm.py  input_modal.py  main.py  server_picker.py  (+2 more)
tests/: conftest.py  test_client.py  test_config.py  test_endpoints.py  test_env_parser.py  test_models.py  test_panels_ui.py  test_screens_ui.py  test_server_tree_ui.py  test_widgets.py
(+39 files in other folders)
