[tool.poetry]
name = "phorge"
version = "0.1.0"
description = "A TUI for Laravel Forge"
authors = []
readme = "README.md"
license = "MIT"
packages = [{include = "phorge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
textual = ">=1.0.0"
httpx = ">=0.27.0"
pydantic = ">=2.0"
tomli-w = ">=1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.23"
textual-dev = ">=1.0"
ruff = ">=0.4"

[tool.poetry.scripts]
phorge = "phorge.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
